# fastapi-tenancy

./: .editorconfig  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.test.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  setup_and_test.sh  sitemap.xml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/detect-changes/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml
api/: index.html
api/cache/: index.html
api/config/: index.html
api/context/: index.html
api/dependencies/: index.html
api/exceptions/: index.html
api/isolation/: index.html
api/manager/: index.html
api/middleware/: index.html
api/migrations/: index.html
api/resolution/: index.html
api/storage/: index.html
api/types/: index.html
compose/mssql/: Dockerfile  entrypoint.sh
contributing/: index.html
contributing/setup/: index.html
contributing/style/: index.html
contributing/testing/: index.html
docs/: index.md
docs/api/: cache.md  config.md  context.md  dependencies.md  exceptions.md  index.md  isolation.md  manager.md  middleware.md  migrations.md  resolution.md  storage.md  types.md
docs/contributing/: index.md  setup.md  style.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: audit-logging.md  caching.md  context.md  dependencies.md  deployment.md  index.md  middleware.md  migrations.md  rate-limiting.md  testing.md
docs/guides/isolation/: database.md  hybrid.md  index.md  rls.md  schema.md
docs/guides/resolution/: custom.md  header.md  index.md  jwt.md  path.md  subdomain.md
docs/guides/storage/: custom.md  index.md  memory.md  redis.md  sqlalchemy.md
docs/javascripts/: extra.js
docs/reference/: changelog.md  config-fields.md  env-vars.md  exceptions.md  glossary-page.md  glossary.md  index.md
docs/stylesheets/: brand.css
examples/: README.md
examples/advanced/01_ecommerce_platform/: Dockerfile  docker-compose.yml  init.sql  main.py
examples/advanced/02_analytics_platform/: Dockerfile  docker-compose.yml  main.py
examples/basic/01_hello_tenant/: main.py
examples/basic/02_schema_isolation/: docker-compose.yml  main.py
examples/basic/03_subdomain_resolution/: main.py
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/audit-logging/: index.html
guides/caching/: index.html
guides/context/: index.html
guides/dependencies/: index.html
guides/deployment/: index.html
guides/isolation/: index.html
guides/isolation/database/: index.html
guides/isolation/hybrid/: index.html
guides/isolation/rls/: index.html
guides/isolation/schema/: index.html
guides/middleware/: index.html
guides/migrations/: index.html
guides/rate-limiting/: index.html
guides/resolution/: index.html
guides/resolution/custom/: index.html
guides/resolution/header/: index.html
guides/resolution/jwt/: index.html
guides/resolution/path/: index.html
guides/resolution/subdomain/: index.html
guides/storage/: index.html
guides/storage/custom/: index.html
guides/storage/memory/: index.html
guides/storage/redis/: index.html
guides/storage/sqlalchemy/: index.html
guides/testing/: index.html
overrides/: main.html
reference/: index.html
reference/changelog/: index.html
reference/config-fields/: index.html
reference/env-vars/: index.html
reference/exceptions/: index.html
reference/glossary/: index.html
reference/glossary-page/: index.html
search/: search_index.json
src/fastapi_tenancy/: __init__.py  dependencies.py  manager.py
src/fastapi_tenancy/cache/: __init__.py  tenant_cache.py
src/fastapi_tenancy/core/: __init__.py  config.py  context.py  exceptions.py  types.py
src/fastapi_tenancy/isolation/: __init__.py  base.py  database.py  factory.py  hybrid.py  rls.py  schema.py
src/fastapi_tenancy/middleware/: __init__.py  tenancy.py
src/fastapi_tenancy/migrations/: __init__.py  manager.py
src/fastapi_tenancy/resolution/: __init__.py  base.py  factory.py  header.py  jwt.py  path.py  subdomain.py
src/fastapi_tenancy/storage/: __init__.py  database.py  memory.py  redis.py  tenant_store.py
src/fastapi_tenancy/utils/: __init__.py  _sanitize.py  db_compat.py  encryption.py  security.py  validation.py
tests/: conftest.py  test_cache.py  test_core_config.py  test_core_context.py  test_core_exceptions.py  test_core_types.py  test_coverage_integration.py  test_dependencies.py  test_failing_fixes.py  test_isolation_postgres.py  test_isolation_sqlite.py  test_manager.py  test_middleware.py  test_migrations.py  test_resolution.py  test_resolvers.py  test_storage_integration.py  test_storage_memory.py  test_store_sqlite.py  test_utils.py
tests/e2e/: test_full_request_cycle.py  test_tenant_lifecycle.py
tests/integration/: test_dependencies.py  test_isolation_schema.py  test_manager.py  test_memory_store.py  test_middleware.py  test_sqlalchemy_store.py
tests/isolation/: conftest.py  test_base.py  test_database.py  test_hybrid.py  test_rls.py  test_schema.py
tests/storage/: conftest.py  test_base_store.py  test_memory_store.py  test_mssql_store.py  test_mysql_store.py  test_postgres_store.py  test_redis_store.py  test_sqla_contract.py  test_sqlite_store.py
tests/unit/: test_config.py  test_context.py  test_db_compat.py  test_exceptions.py  test_resolvers.py  test_security.py  test_types.py  test_validation.py
tests/unit/storage/: __init__.py  test_memory.py
